@@ -1,6 +1,7 @@
 Version 1.1.2 (released ??-???-????)
 
   * security fix: validate the 'view' parameter to avoid XSS attack
+  * security fix: avoid printing illegal parameter names and values
   * add optional support for character encoding detection (issue #400)
   * fix username case handling in svnauthz module (issue #419)
   * fix cvsdbadmin/svnadmin rebuild error on missing repos (issue #420)
